fixed button style on smaller screen

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
@@ -23,3 +23,19 @@
 .flowButton:last-child {
     padding-right: 0px;
 }
+
+@media only screen and (max-width: 2200px) {
+    .caseResponsiveBtn {
+        height: 2.5rem; /* Set a fixed height for buttons on smaller screens */
+        line-height: 1.2; /* Reduce space between lines on smaller screens */
+        padding: 4px;
+    }
+}
+
+@media only screen and (max-width: 1920px) {
+    .threadResponsiveBtn {
+        height: 2rem;
+        line-height: 1.2;
+        padding: 4px;
+    }
+}
